# serializer version: 1
# name: test_switches[switch.aqualogic_aux_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_1',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 1',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_2',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 2',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_3',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 3',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 3',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_4',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 4',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 4',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 4',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_5',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 5',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 5',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_6',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 6',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 6',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 6',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_aux_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_aux_7',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Aux 7',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Aux 7',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_aux_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_aux_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Aux 7',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_aux_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_filter',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Filter',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Filter',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Filter',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_filter_low_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_filter_low_speed',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Filter Low Speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Filter Low Speed',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_filter_low_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_filter_low_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Filter Low Speed',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_filter_low_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switches[switch.aqualogic_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.aqualogic_lights',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Lights',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'AquaLogic Lights',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[switch.aqualogic_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Lights',
    }),
    'context': <ANY>,
    'entity_id': 'switch.aqualogic_lights',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
